Changed my affiliation and adressed final details before re-submission

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -2,7 +2,7 @@
 title: "Timing and magnitude of climate driven range shifts in transboundary fish stocks challenge their management"
 author: "REVISED MANUSCRIPT. DO NOT SHARE."
 date: "Affiliations: ^1^Institute for the Oceans and Fisheries, University of British Columbia, Vancouver, Canada. ^2^Climate and Environmental Physics, Physics Institute, University of Bern. ^3^Oeschger Centre for Climate Change Research, University of Bern, Switzerland. ^4^School of Environmental Sciences, University of Liverpool. ^5^Stanford Center for Ocean Solutions, Stanford University, Stanford, United States"
-subtitle: "Juliano Palacios-Abrantes*^1^, Thomas L. Frölicher^2,3^, Gabriel Reygondeau^1^, U. Rashid Sumaila^1^, Alessandro Tagliabue^4^, Colette C.C. Wabnitz^1,5^, and William W.L. Cheung^1^"
+subtitle: "Juliano Palacios-Abrantes*^1,2^, Thomas L. Frölicher^3,4^, Gabriel Reygondeau^1^, U. Rashid Sumaila^1^, Alessandro Tagliabue^5^, Colette C.C. Wabnitz^1,6^, and William W.L. Cheung^1^"
 # output: bookdown::pdf_document2
 output: bookdown::word_document2
 reference_docx:  ../References/sci_template.docx
@@ -63,7 +63,7 @@ corresponding author: [j.palacio\@oceans.ubc.ca](mailto:j.palacios@oceans.ubc.ca
 
 <!-- An opening sentence that states the question/problem addressed by the research AND Enough background content to give context to the study AND A brief statement of primary results AND A short concluding sentence. -->
 
-**Climate change is shifting the distribution of shared fish stocks between neighboring countries’ Exclusive Economic Zones (EEZ) and the high seas. The timescale of these transboundary shifts determines how climate change will affect international fisheries governance.** Coupling a large ensemble simulation of an Earth system model to a species distribution model, we show that 78% of the world will experience at least one shifting transboundary stock by 2030. By 2100, 45% of stocks would have shifted out of 81% of EEZ waters under a high emissions scenario. Importantly, many countries that are highly dependent on fisheries for income, food and nutrition security, as well as livelihoods emerge as hotspots for transboundary shifts. The imminent onset of transboundary shifts in fish stocks highlights the urgent need to re-formulate international fisheries policies to limit conflict over these fish stocks. **A strong expansion of bi- and multi-lateral actions.**
+**Climate change is shifting the distribution of shared fish stocks between neighboring countries’ Exclusive Economic Zones (EEZ) and the high seas. The timescale of these transboundary shifts determines how climate change will affect international fisheries governance.** Coupling a large ensemble simulation of an Earth system model to a species distribution model, we show that by 2030 23% of transboundary stocks would have shifted and 78% of the world will experience at least one shifting stock. By 2100, 45% of stocks would have shifted out of 81% of EEZ waters under a high emissions scenario. Importantly, many countries that are highly dependent on fisheries for income, food and nutrition security, as well as livelihoods emerge as hotspots for transboundary shifts. **The imminent onset of transboundary shifts in fish stocks highlights the urgent need to create international fisheries policies to limit conflict over these fish stocks and re-formulate those existing.**
 
 <!-- **One-Sentence Summary** -->
 
@@ -95,7 +95,7 @@ grid.raster(img)
 
 **Our results suggest that 4,119 transboundary stocks will experience a range shift beyond historical variability by 2100 (hereafter referred to as ‘shifts’; Fig. \@ref(fig:toeFigure1)A), with the first shift modelled to have occurred back in 2006.** This corresponds to 45% of the studied stocks (Fig. \@ref(fig:toeFigure1)C). The average year of shift in the shared distribution of these stocks in all EEZs analyzed is projected to be 2036 (s.d. of all species, $\pm$ 28 years). Furthermore, 81% of the world’s EEZs will experience at least one transboundary stock shift by 2100 with 78% recording a distributional shift in stocks by the UN 2030 Agenda’s deadline (Fig. \@ref(fig:toeFigure1)C).
 
-```{r toeFigure1, eval = T,  echo = F, fig.width = 9, fig.height=4, fig.pos= "H", fig.cap =  "**Timeline of shifts in transboundary shared stock distribution.** (A) Number of stocks (cumulative) whose distribution centroids that have shifted beyond natural variations over time (from 2006 to >2100), (B) Number of EEZs (cumulative) with the distribution centroid of at least one stock that have shifted beyond natural variations and (C) proportion of total shifting stocks and EEZs with at least one stock shifting beyond natural variability. Dashed lines represent the year by which countries have committed to reach full implementation of the 2030 Agenda, as well as mid and late change in range shift (see Methods), respectively."}
+```{r toeFigure1, eval = T,  echo = F, fig.width = 9, fig.height=4, fig.pos= "H", fig.cap =  "**Timeline of shifts in transboundary shared stock distribution.** (A) Number of stocks (cumulative) whose distribution centroids that have shifted beyond natural variations over time (from 2006 to >2100), (B) Number of EEZs (cumulative) with the distribution centroid of at least one stock that have shifted beyond natural variations and (C) proportion of total shifting stocks and EEZs with at least one stock shifting beyond natural variability. Dashed lines represent the year by which countries have committed to reach full implementation of the 2030 Agenda, as well as mid and late change in range shift (Methods), respectively."}
 
 img <- readPNG("../Figures/Fig2.png")
 grid.raster(img)
@@ -105,7 +105,7 @@ grid.raster(img)
 
 The median year in which transboundary stocks experience a range shift varied significantly according to the species’ habitat association (Methods; Kruskal-Wallis, $X^2$ = 203.85, DF = 93, *p* < 0.001; Tables \@ref(tab:toeTableS1), \@ref(tab:toeTableS2) and Fig. \@ref(fig:toeFigureS1)) and EEZs' geographic regions (Methods; Kruskal-Wallis, $X^2$ = 242.11, DF = 93, *p* < 0.001; Table S3 and Fig. 2A). Overall, most tropical EEZs and stocks will see earlier shifts, with the EEZs of Latin America, the Caribbean and Polynesia experiencing shifts significantly earlier (*p* < 0.05; Tables \@ref(tab:toeTableS2) and \@ref(tab:toeTableS3) than almost any other region (Figs. \@ref(fig:toeFigure2)B, \@ref(fig:toeFigureS1) and \@ref(fig:toeFigureS2)). In contrast, EEZs and stocks located in temperate regions, like northern Europe and eastern Asia, are projected to experience much later range shifts. Stocks in a number of EEZs including Brazil and New Zealand’s EEZs are projected to experience no range shifts beyond natural variability by the end of this century (Fig. \@ref(fig:toeFigure2)A).
 
-On average, shifting transboundary stocks represented 23% (s.d. $\pm$  22%) of annual revenue from fisheries targeting **transboundary** stocks across the world's EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). **From all fisheries targeting transboundary stocks between 2004 and 2010 in the global EEZs, shifting stocks represented on average 23% (s.d. $\pm$  22%) of the yearly revenue (Fig. \@ref(fig:toeFigure2)A).** However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru).
+**On average, shifting transboundary stocks represented 23% (s.d. $\pm$  22%) of annual revenue from fisheries targeting transboundary stocks across the world's EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A).** However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru).
 
 
 ```{r toeFigure2, eval = T,  echo = F, fig.width  = 13,fig.pos= "H", fig.height =11, fig.cap =  "**Year of change in the shared distribution of 4,119 transboundary stocks. A) Land polygons show the contribution of shifting stocks to a country or territory’s total fishing revenue from transboundary stocks. Exclusive Economic Zone polygons display average year of range shifts within them. Warm colors are indicative of an early shift/high fishing revenue contribution from transboundary stocks while cool colors represent a late shift/low fishing revenue. EEZs with no distributional shift between 2006 and 2100 are represented in pale blue. B) Year of shared distribution shifts by UN sub-regions. Points color coded by the median year of range shift. Horizontal dashed line represents the year by which countries have committed to reach full implementation of the 2030 Agenda. N = North, S = South, W = West and E = East. Ltn. Ame. and the Car. = Latin America and the Caribbean. Aus and New Z. = Australia and New Zealand."}
@@ -131,7 +131,7 @@ grid.raster(img)
 
 <!-- We based the transboundary index on a stock’s centroid defined as the average grid cells that contain the majority of a stock’s abundance (see Methods - Calculating an index of transboundary range shift). Results from the sensitivity analysis suggest that our method is robust to the abundance level (e.g., the top 95%) of the stock (Fig. \@ref(fig:toeFigureS3)). In addition, we set an arbitrary threshold of 2 s.d. (95% confidence) to determine the time of emergence of the transboundary index. Sensitivity tests to a lower threshold of 1 s.d. (for a 68% confidence) resulted in a global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27, a difference of about 7 years (Fig. \@ref(fig:toeFigureS4)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks. SENT TO METHODS!!!! -->
 
-We estimated the intensity of the distributional shift of transboundary stocks in terms of changes in catch proportion by 2030 (2020-2040) and 2050 (2040-2060), relative to the recent past (1951-2005) (see Methods). **Projections show that by 2030, 59% $\pm$ 17% of the yearly catch from transboundary stocks will change beyond historic variability experinced within an EEZ’s (Fig. \@ref(fig:toeFigure4)A).** Moreover, 85% (n = 239) of the world’s EEZs will have experienced changes in catch proportion of transboundary stocks by 2030. **By mid-21st century, the number of EEZs with changing stocks, as well as the number of stocks experiencing changes in catch proportion and the magnitude of that change will increase (Figs. \@ref(fig:toeFigureS3) and \@ref(fig:toeFigureS4)).**The direction and intensity of shifts in transboundary stocks are largely related to regional changes in biogeography and the geometry of EEZs (Fig. 5A). Along the Atlantic and Pacific coasts of Northern and Southern America and the Atlantic coast of Southern Africa, shifts in stocks are expected to benefit poleward EEZs. However, shifts along the coasts of Pacific Central America and West Africa occur in an equatorial direction. The direction and intensity of shifts in transboundary stocks are largely related to regional changes in biogeography and the geometry of EEZs (Fig. \@ref(fig:toeFigure4)A). Along the Atlantic and Pacific coasts of Northern and Southern America and the Atlantic coast of Southern Africa, the proportion of the stock is expected to follow a projected poleward shift. However, shifts in the coasts of Pacific Central America and West Africa occur along an equatorial direction.
+We estimated the intensity of the distributional shift of transboundary stocks in terms of changes in catch proportion by 2030 (2020-2040) and 2050 (2040-2060), relative to the recent past (1951-2005) (see Methods). **Projections show that by 2030, 59% $\pm$ 17% of the yearly catch from transboundary stocks will change beyond the historic variability experienced within an EEZ’s (Fig. \@ref(fig:toeFigure4)A).** Moreover, 85% (n = 239) of the world’s EEZs will have experienced changes in catch proportion of transboundary stocks by 2030. **By mid-21st century, the number of EEZs with changing stocks, as well as the number of stocks experiencing changes in catch proportion and the magnitude of that change will increase (Figs. \@ref(fig:toeFigureS3) and \@ref(fig:toeFigureS4)).**The direction and intensity of shifts in transboundary stocks are largely related to regional changes in biogeography and the geometry of EEZs (Fig. \@ref(fig:toeFigure4)A). Along the Atlantic and Pacific coasts of Northern and Southern America and the Atlantic coast of Southern Africa, shifts in stocks are expected to benefit poleward EEZs. However, shifts along the coasts of Pacific Central America and West Africa occur in an equatorial direction.
 
 ```{r toeFigure4, eval = T,  echo = F, fig.width=12, fig.height=10,fig.pos= "H", fig.cap =  "**Changes in stock proportion of neighboring Exclusive Economic Zones by 2030 (2021-2040) relative to 1951-2005.** Lines represent the average change in transboundary stock share ratio (Methods) with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio (i.e., over two standard deviations from the historical catch proportion) beyond the identified threat point with higher gains identified in warmer colors. Panel B highlights changes for the Caribbean and Northwestern Europe."}
 
@@ -150,12 +150,12 @@ grid.raster(img)
 
 **High present-day climate risk for transboundary fisheries**
 
-Our findings highlighting early shifts in the shared distribution of transboundary stocks concur with previous studies that have detected changes in marine catch composition and attributed these to climate change [e.g., @Cheung:2013gk; @Frainer:2017ji; @Last:2011fd]. For example, in the early 2000s, Humboldt squid (*Dosidicus gigas*) substantially expanded its geographic range poleward, reaching the coast of Washington state (US), in response to climatic, and associated oceanographic and ecological changes [@Zeidberg:2007gs]. A new fishery targeting Humboldt squid quickly developed on the heels of the species’ range expansion [@Pinsky:2014by]. In the northeast Atlantic, fisheries on Atlantic mackerel (*Scomber scombrus*) are multi-laterally managed by the EU, Norway, Iceland, Russia, and Denmark (on behalf of the Faroe Islands and Greenland) through the North-East Atlantic Fisheries Commission (NEAFC). However, a range expansion of Atlantic mackerel due to environmental variation into Icelandic waters in 2007 resulted in Iceland capturing 6% of the fishery’s total allowable catch and a further 18% in 2008, without consultation with NEAFC, threatening the sustainability of the stock [@Spijkers:2017ij]. These changes resulted in disputes between Iceland and the Faroe Islands, as well as among NEAFC member states [@Spijkers:2017ij]. **Other documented cases of early range expansions across international jurisdictions have also been documented for multiple stocks along the European Union regulatory areas [@Baudron:2020dj], the Benguela Current [@Potts:2014bq; @Yemane:2014jg], and the southwest South Atlantic Ocean [@Franco:2020bk]. Despite these documented cases, broadly speaking, there is a lack of information and data regarding which and how many transboundary stocks are shifting, where they are shifting to and whether they are jointly managed. This is particularly important as modeling exercises project that climate change will continue to change the distribution of transboundary stocks to the point that some tropical EEZs will lose them completely [@Oremus:2020id] while other EEZs, mainly in higher latitudes, will stand to win new stocks [@Pinsky:2018cb].**
+Our findings highlighting early shifts in the shared distribution of transboundary stocks concur with previous studies that have detected changes in marine catch composition and attributed these to climate change [e.g., @Cheung:2013gk; @Frainer:2017ji; @Last:2011fd]. For example, in the early 2000s, Humboldt squid (*Dosidicus gigas*) substantially expanded its geographic range poleward, reaching the coast of Washington state (US), in response to climatic, and associated oceanographic and ecological changes [@Zeidberg:2007gs]. A new fishery targeting Humboldt squid quickly developed on the heels of the species’ range expansion [@Pinsky:2014by]. In the northeast Atlantic, fisheries on Atlantic mackerel (*Scomber scombrus*) are multi-laterally managed by the EU, Norway, Iceland, Russia, and Denmark (on behalf of the Faroe Islands and Greenland) through the North-East Atlantic Fisheries Commission (NEAFC). However, a range expansion of Atlantic mackerel due to environmental variation into Icelandic waters in 2007 resulted in Iceland capturing 6% of the fishery’s total allowable catch and a further 18% in 2008, without consultation with NEAFC, threatening the sustainability of the stock [@Spijkers:2017ij]. These changes resulted in disputes between Iceland and the Faroe Islands, as well as among NEAFC member states [@Spijkers:2017ij]. **Other documented cases of early range expansions across international jurisdictions have also been documented for multiple stocks along the European Union regulatory areas [@Baudron:2020dj], the Benguela Current [@Potts:2014bq; @Yemane:2014jg], and the southwest South Atlantic Ocean [@Franco:2020bk]. Despite these documented cases, broadly speaking, there is a lack of information and data regarding which and how many transboundary stocks are shifting, where they are shifting to and whether they are jointly managed. This is particularly important for international fisheries management as modeling exercises project that climate change will continue to change the distribution of transboundary stocks to the point that some tropical EEZs will lose them completely [@Oremus:2020id] while other EEZs, mainly in higher latitudes, will stand to win new stocks [@Pinsky:2018cb].**
 
 
 **Climate risk hotspots for transboundary fisheries management**
 
-Our results identify regional “hotspots” of climate risk for transboundary fisheries management that will require the prompt adaptation of management plans (Figures \@ref(fig:toeFigure2)A and \@ref(fig:toeFigure4)A). Regions such as the Caribbean are characterized by high levels of warming relative to historical natural variability [@IPCC:2019tn; @Hawkins:2012hc] and species’ high vulnerability to warming waters [@IPCC:2019tn]. Moreover, they represent relatively low area EEZs that border multiple countries. Game theory predicts that the greater the number of negotiating parties, the harder it is for parties to reach an agreement [@Gronbaek:2020ei]. Thus, coordinating the management of shifting transboundary stocks for countries in these regions will be particularly challenging. 
+Our results identify regional “hotspots” of climate risk for transboundary fisheries management that will require the prompt adaptation of management plans (Figs. \@ref(fig:toeFigure2)A and \@ref(fig:toeFigure4)A). Regions such as the Caribbean are characterized by high levels of warming relative to historical natural variability [@IPCC:2019tn; @Hawkins:2012hc] and species’ high vulnerability to warming waters [@IPCC:2019tn]. Moreover, they represent relatively low area EEZs that border multiple countries. Game theory predicts that the greater the number of negotiating parties, the harder it is for parties to reach an agreement [@Gronbaek:2020ei]. Thus, coordinating the management of shifting transboundary stocks for countries in these regions will be particularly challenging. 
 
 **Most management plans that are not designed or prepared to respond to range and abundance shifts will be less resilient to climate change [@Miller:2013iv; @Sumaila:2020tp]. Focusing on identified “hotspots” will help anticipate any potential increases in and averting fisheries conflicts in coming years. Identified strategies to cope with changes in the shared proportion of transboundary stocks include strengthening of current cooperative mechanisms and the consideration of side payments (including non-monetary arrangements) [@Tunca:2019if; @Miller:2013iv], increased international cooperation [@Miller:2013iv] and management rules that capture distributional shifts [@PalaciosAbrantes:2020vt; @Pinsky:2018cb]. Some examples of current treaties that have adapted some of these strategies include: the Pacific Salmon Treaty between Canada and the U.S. to manage Pacific salmon (Oncorhynchus sp.) and which has a conservation fund functioning as a side payment [@Miller:2013iv], the International Pacific Halibut Commission between Canada and the United States, which as the name implies manages Pacific halibut (*Hippoglossus stenolepis*) and allocates quota based on the stock’s yearly distribution [@PalaciosAbrantes:2020vt]; and the Parties to the Nauru Agreement (PNA) an Oceania subregional agreement among 8 Pacific Island countries and Tokelau, which collectively manage the largest tuna fishery in the world, controlling around 50% of the global supply of skipjack tuna (*Katsuwonus pelamis*). The PNA manage fishing effort under a so-called Vessel Day Scheme, an adaptive and equitable system which accounts for shifts in stocks and catches as a result of climate variability [@Bahri:2021wz]. Quota allocation methods based on a stock’s current distribution and/or according to fixed-historical proportions like that of the European Union need to evolve to be more agile [@Baudron:2020dj] and potentially move towards a dynamic method or a combination of both [@PalaciosAbrantes:2020vt; @Sumaila:2020tp].**
 
