Inlcuded sensitivity analysis text

--- a/Scripts/Supplements.Rmd
+++ b/Scripts/Supplements.Rmd
@@ -117,8 +117,7 @@ ToE = TI_\mu[t']>2* TI_\sigma
 
 Thus, we define a shift in a stock’s shared distribution (i.e., time of emergence) as the first year the TI “emerges” from historical internal variability (*t’*). It assumes that, from a fisheries’ perspective, the first year a stock’s distribution shift from a 10-year average is sufficient to call for caution.
 
-Since the ToE method is sensitive to the noise estimate (i.e., historical natural variability) [@Reference?], we conducted sensitivity analysis where we first calculated the average across the 10 ensemble members for each year between 1951 to 2005 and the calculating the standard deviation over 1950-2005 [@Reference?]. Under this method, the natural variability is slightly larger resulting in a latter overall time of emergence (average ToE = 2057 vs 2036 of the original method). However, this method projects 1,139 more emerging stocks than the original (5,258 stocks vs 4,119 of the original method). The minimum and maximum ToE remains the same, and the number of EEZs with emerging stocks slightly increases with the alternative method. Further research looking at different approaches of estimating the natural variability component could help reduce the uncertainty in the estimation of the time of emergence of transboundary stocks. The ToE was also computed for a less conservative estimation using a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged). In this case, the global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)).
-
+Since the ToE method is sensitive to the noise estimate (i.e., historical natural variability), we conducted sensitivity analysis where we first calculated the average across the 10 ensemble members for each year between 1951 to 2005 and the calculating the standard deviation over 1950-2005. Under this method, the natural variability is slightly larger resulting in a latter overall time of emergence (average ToE = 2057 vs 2036 of the original method). However, this method projects 1,139 more emerging stocks than the original (5,258 stocks vs 4,119 of the original method). The minimum and maximum ToE remains the same, and the number of EEZs with emerging stocks slightly increases with the alternative method. Further research looking at different approaches of estimating the natural variability component could help reduce the uncertainty in the estimation of the time of emergence of transboundary stocks. The ToE was also computed for a less conservative estimation using a threshold of one standard deviation (i.e., representing a probability of 68% that the index has emerged). In this case, the global average shift in the shared distribution of transboundary stocks by 2029 $\pm$ 27 years, a difference of about 7 years (Fig. \@ref(fig:toeFigureS8)). In total, 5,745 transboundary stocks would shift their shared distributions between 2006 and 2100 considering a less conservative metric, that is, 33% (n = 1626) more shifting stocks (Figs. \@ref(fig:toeFigureS2) and \@ref(fig:toeFigureS8)).
 
 _**Quantifying the intensity of transboundary stocks’ range shift**_
 
